--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "build:css": "postcss src/styles.css -o dist/styles.css"
+    "lint": "next lint"
   },
   "dependencies": {
     "file-loader": "^6.2.0",
